@@ -2,7 +2,7 @@ package com.anton.prog_hub;
 
 public class Task31 {
     public static void main(String[] args) {
-        Boolean b = new Boolean("Hello");
+        Boolean b = Boolean.valueOf("Hello");
         System.out.println(b);
         Boolean b1 = new Boolean("tRue");
         System.out.println(b1);
